2003-02-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/pthread_kill.c (__pthread_kill): Don't
	use INLINE_SYSCALL.  Error number is returned, not -1.

	* pthreadP.h: Mark declarations of __find_in_stack_list, __free_tcb,
	and __deallocate_stack with internal_function.
	* pthread_create.c: Adjust definitions appropriately.
	* allocatestack.c: Likewise.

	* pthread_join.c: Add one more __builtin_expect.
	* pthread_timedjoin.c: Likewise.

	* pthread_getspecific.c (__pthread_getspecific): Clear data->data
	not data of sequence number does not match.
	Add one __builtin_expect.

	* Makefile (tests): Add tst-clock1.
	* tst-clock1.c: New file.

	* pthread_setconcurrency.c (pthread_setconcurrency): Fail for
	negative arguments.
	* Makefile (tests): Add tst-basic5.
	* tst-basic5.c: New file.

2003-02-14  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-basic4.
	* tst-basic4.c: New file.

	* pthreadP.h: Add declaraction for __nptl_nthreads.
	* pthread_create.c: Define __nptl_nthreads
	(start_thread): Increment __nptl_nthreads at beginning.  Decrement
	after thread is done.  If then zero, call exit(0).
	* sysdeps/pthread/pthread-functions.h (struct pthread_functions):
	Add ptr_nthreads.  Define HAVE_PTR_NTHREADS.
	* init.c (pthread_functions): Initialize ptr_nthreads.
	* allocatestack.c (nptl_nthreads): Remove definition and all uses.
	(__reclaim_stacks): Decrement __nptl_nthreads.
	* sysdeps/pthread/Makefile [$(subdir)==csu] (CFLAGS-libc-start.c):
	Define.
	* Makefile (tests): Add tst-basic3.
	* tst-basic3.c: New file.

	* descr.h: Define CANCELING_BIT and CANCELING_BITMASK.  Introduce
	after CANCELTYPE_BIT, move the other bits up.  Update CANCEL_RESTMASK.
	* init.c (sigcancel_handler): Also set CANCELING_BITMASK bit in newval.
	* pthread_cancel.c (pthread_cancel): Likewise.  Also set CANCELING_BIT
	if asynchronous canceling is enabled.
	* pthread_join.c (pthread_join): When recognizing circular joins,